--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
   "dependencies": {
     "aos": "^2.3.4",
     "gulp-concat": "^2.6.1",
+    "modules": "^0.4.0",
     "sass": "^1.45.1",
     "swiper": "^8.4.5",
     "vanta": "^0.5.24"
